@@ -1,3 +1,8 @@
+2007-12-01  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* MonoDevelop.Core.ProgressMonitoring/ConsoleProgressMonitor.cs: Added
+	  property to disable message logging.
+
 2007-11-22  Michael Hutchinson <mhutchinson@novell.com> 
 
 	* MonoDevelop.Core/SystemAssemblyService.cs: Update SupportedVersions
